Update FS boxes permitted params + API specification
