# app/controllers/api/site_admin/fs/boxes_controller.rb
@@ -8,6 +8,6 @@ class Api::SiteAdmin::Fs::BoxesController < Api::SiteAdminController
   private
   def box_params
     params.require(:box).permit(:name, :short_name, :uri, :color, :api_connection_id,
-                                :settings_obo, api_connection: [:sub, :api_token_private_key, settings: [:username, :password]]).merge(tenant_id: params[:tenant_id])
+                                settings: [:obo, :dic, :subject_id], api_connection: [:sub, :api_token_private_key, settings: [:username, :password]]).merge(tenant_id: params[:tenant_id])
   end
 end
